--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,12 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
+                
+                
               }
             ],
             "styles": [
@@ -85,9 +88,12 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         }
       }
